# solving_ros_problems

./: README.md
rover/: setup.cfg
rover/launch/: 1_Rviz.launch.py  2_gazebo_spwan.launch.py
rover/urdf/: rover.urdf
solve_cpp/: CMakeLists.txt  package.xml
solve_cpp/src/: webcam.cpp  webcam_sub.cpp
solve_py/: package.xml  setup.cfg  setup.py
solve_py/config/: camera_config_a.yaml  camera_config_b.yaml
solve_py/test_py/: camera_params_a.py  camera_params_b.py
